User backend logic done

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,18 @@
 PORT=
+
 MONGODB_URI=
+
 JWT_SECRET=
 JWT_EXPIRY=
+
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_CLOUD_APIKEY=
 CLOUDINARY_CLOUD_APISECRET=
+
+FRONTEND_URL=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+SMTP_FROM_MAIL=
