--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "format": "prettier --write ."
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "@types/mongoose": "^5.11.96",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.13",
+    "@types/nodemailer": "^6.4.17",
     "@types/nodemon": "^1.19.6",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
@@ -32,6 +34,10 @@
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10"
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3"
   }
 }
