--- a/backend/.env.example
+++ b/backend/.env.example
@@ -16,3 +16,9 @@ SMTP_PORT=
 SMTP_USERNAME=
 SMTP_PASSWORD=
 SMTP_FROM_MAIL=
+
+RAZORPAY_KEY_ID=
+RAZORPAY_SECRET=
+RAZORPAY_PLAN_ID=
+
+CONTACT_US_EMAIL=
